<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00796B"
    android:orientation="vertical"
    android:textColor="#F5F5F5"
    tools:context="com.example.android.smallbusinessapp2.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/humanity_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="#757575"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/humanity" />

        <TextView
            android:id="@+id/main_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/humanity_image"
            android:layout_marginLeft="20dp"
            android:layout_weight="2"
            android:text="@string/main_header"
            android:textColor="#F5F5F5"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_header"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="2"
            android:text="@string/intro"
            android:textColor="#F5F5F5"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_us"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:hint="@string/name_hint"
            android:inputType="textCapWords"
            android:textAllCaps="true"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/email_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_view"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:hint="@string/email_hint"
            android:inputType="textCapWords"
            android:textAllCaps="true"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/interests_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_view"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:hint="@string/interests_hint"
            android:inputType="textEmailAddress"
            android:textAllCaps="true"
            android:textSize="10sp" />

        <Button
            android:id="@+id/registration_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/interests_view"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:onClick="registration"
            android:text="@string/registration_button" />

        <TextView
            android:id="@+id/second_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/registration_button"
            android:layout_marginLeft="20dp"
            android:layout_weight="2"
            android:text="@string/second_header"
            android:textColor="#F5F5F5"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/submit_new_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/second_header"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="2"
            android:text="@string/submit_new_event"
            android:textColor="#F5F5F5"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/event_name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/submit_new_event"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:hint="@string/event_name_hint"
            android:inputType="textCapWords"
            android:textAllCaps="true"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/event_email_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_name_view"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:hint="@string/event_email_hint"
            android:inputType="textCapWords"
            android:textAllCaps="true"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/contact_person_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_email_view"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:hint="@string/contact_person_hint"
            android:inputType="textEmailAddress"
            android:textAllCaps="true"
            android:textSize="10sp" />

        <Button
            android:id="@+id/event_registration_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact_person_view"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:onClick="eventRegistration"
            android:text="@string/event_registration_button" />

        <TextView
            android:id="@+id/registration_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_registration_button"
            android:text=""
            android:textColor="#F5F5F5"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />
        <Button
            android:id="@+id/clear_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/registration_summary_text_view"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:onClick="clearForm"
            android:text="@string/clear_form"/>

            <TextView
                android:id="@+id/contact_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#757575"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:text="@string/contact_info"
                android:textColor="#F5F5F5"
                android:textDirection="firstStrongLtr"
                android:textSize="10sp"
                android:layout_below="@id/clear_form"/>


    </RelativeLayout>

</ScrollView>
